Router limpio y tipado